# agent-rag

./: .gitignore  README.md  app_cli.py  main_api.py  pyproject.toml  vector_db.py
OUTPUT/.NET_Framework_4.5_Fact_Sheetdotnet_framework_4.5/: .NET_Framework_4.5_Fact_Sheetdotnet_framework_4.5.md  .NET_Framework_4.5_Fact_Sheetdotnet_framework_4.5_meta.json
OUTPUT/Account_Manager_Solution_FactSheetAccountManagerOneSitting_U/: Account_Manager_Solution_FactSheetAccountManagerOneSitting_U.md  Account_Manager_Solution_FactSheetAccountManagerOneSitting_U_meta.json
OUTPUT/Accounts_Payable_(New)_AccountsPayableNewSampleReport/: Accounts_Payable_(New)_AccountsPayableNewSampleReport.md  Accounts_Payable_(New)_AccountsPayableNewSampleReport_meta.json
OUTPUT/Accounts_Payable_Simulation_(New)_AccountsPayableSimulationN_1/: Accounts_Payable_Simulation_(New)_AccountsPayableSimulationN_1.md  Accounts_Payable_Simulation_(New)_AccountsPayableSimulationN_1_meta.json
OUTPUT/Accounts_Receivable_(New)_AccountsReceivableNewSampleReport/: Accounts_Receivable_(New)_AccountsReceivableNewSampleReport.md  Accounts_Receivable_(New)_AccountsReceivableNewSampleReport_meta.json
OUTPUT/Accounts_Receivable_Simulation_(New)_AccountsReceivableSimul_1/: Accounts_Receivable_Simulation_(New)_AccountsReceivableSimul_1.md  Accounts_Receivable_Simulation_(New)_AccountsReceivableSimul_1_meta.json
OUTPUT/Administrative_Professional_-_Short_Form_FactSheetAdministra/: Administrative_Professional_-_Short_Form_FactSheetAdministra.md  (+1 more)
agent model/: agent.py  main_runner_app.py  session_memory.py
(+465 files in other folders)
