[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.7",
    "flask>=3.1.0",
    "google-adk>=0.3.0",
    "langchain>=0.3.24",
    "litellm>=1.68.0",
    "marker>=2.1.3",
    "marker-pdf>=1.6.2",
    "pillow>=10.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]
